# N5000_SDK

./: README.md
Source/: CMakeLists.txt  N5000与N4000探头对应表.xlsx  NirsN5000_protocol.hpp  cfg.ui  circular_queue.h  configparam.cpp  configparam.h  configparam.ui  devtable.cpp  devtable.h  icon.rc  launch.cpp  launch.h  launch.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mywindow.cpp  mywindow.h  pic.qrc  protocol.cpp  protocol.h  vftflow.cpp  vftflow.h  vftflow.ui  waveplot.cpp  waveplot.h  waveview.cpp  waveview.h
Source/config/: hardwareconfig.csv  network_config.csv  structure.csv  偏旁组字.csv  偏旁组字_config.csv  汉字组词.csv  汉字组词_config.csv  类别联想.csv  类别联想_config.csv  词语造句_config.csv
scripts/: GetE.m  N5000_RAW2Conc.m  N5000_T.m  相对浓度转换脚本说明.txt
